# koto

./: .gitignore  .golangci.yaml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  README.md  build.rs  codecov.yml  go.mod  install.sh  main.go
.cargo/: audit.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: gate-online.sh  workflow-continue.sh
.github/: pull_request_template.md
.github/workflows/: benches.yml  check-template-freshness.yml  eval-plugins.yml  prepare-release.yml  release.yml  validate-plugins.yml  validate.yml
.release/: post-release.sh  set-version.sh
benches/: discovery_scan.rs  recursion_caps.rs
cmd/koto/: integration_test.go  lint_test.go  main.go  main_test.go
docs/: STABILITY.md  workspace-layout.md
docs/briefs/: BRIEF-config-version-compat.md  BRIEF-native-workflows-phase-detail.md  BRIEF-native-workflows-render.md  BRIEF-request-store-converge.md  BRIEF-session-legibility.md
docs/designs/: DESIGN-auto-advance-response-contract.md  DESIGN-auto-advance-transitions.md  DESIGN-auto-advancement-engine.md  DESIGN-backend-state-persistence.md  DESIGN-batch-child-spawning.md  DESIGN-batch-rewind.md  DESIGN-config-and-cloud-sync.md  DESIGN-config-version-compat.md  DESIGN-cross-agent-delegation.md  DESIGN-dashboard-full-observability.md  DESIGN-default-action-execution.md  DESIGN-event-log-format.md  DESIGN-gate-backward-compat.md  DESIGN-gate-contract-compiler-validation.md  DESIGN-gate-override-mechanism.md  DESIGN-hierarchical-workflows.md  DESIGN-koto-ad-hoc-workflows.md  DESIGN-koto-agent-integration.md  DESIGN-koto-cli-output-contract.md  DESIGN-koto-cli-tooling.md  DESIGN-koto-engine.md  DESIGN-koto-installation.md  DESIGN-koto-next-output-contract.md  DESIGN-koto-template-authoring-skill.md  DESIGN-koto-template-format.md  DESIGN-koto-user-skill.md  DESIGN-local-dashboard.md  DESIGN-local-session-storage.md  DESIGN-mid-state-decision-capture.md  DESIGN-migrate-koto-go-to-rust.md  DESIGN-native-workflows-phase-detail.md  DESIGN-native-workflows-render.md  DESIGN-override-gate-rationale.md  DESIGN-request-store-converge.md  DESIGN-session-feed-data-contract.md  DESIGN-session-legibility.md  DESIGN-session-persistence-storage.md  DESIGN-session-schema-hygiene.md  DESIGN-shirabe-work-on-template.md  DESIGN-structured-gate-output.md  (+5 more)
docs/guides/: cli-usage.md  cloud-sync-setup.md  custom-skill-authoring.md  library-usage.md  native-workflows-verification.md  template-freshness-ci.md
docs/plans/: PLAN-auto-advance-transitions.md  PLAN-auto-advancement-engine.md  PLAN-backend-state-persistence.md  PLAN-batch-child-spawning.md  PLAN-batch-rewind.md  PLAN-config-and-cloud-sync.md  PLAN-config-version-compat.md  PLAN-dashboard-full-observability.md  PLAN-default-action-execution.md  PLAN-event-log-format.md  PLAN-gate-backward-compat.md  PLAN-gate-contract-compiler-validation.md  PLAN-gate-override-mechanism.md  PLAN-hierarchical-workflows.md  PLAN-koto-ad-hoc-workflows.md  PLAN-koto-cli-output-contract.md  PLAN-koto-next-output-contract.md  PLAN-koto-template-authoring-skill.md  PLAN-koto-user-skill.md  PLAN-local-dashboard.md  PLAN-local-session-storage.md  PLAN-mid-state-decision-capture.md  PLAN-migrate-koto-go-to-rust.md  (+13 more)
koto-stability-tests/: Cargo.toml
koto-stability-tests/src/: lib.rs
scripts/: pre-commit  run-evals.sh  verify-native-workflows.sh
src/: action.rs  buildinfo.rs  cache.rs  discover.rs  gate.rs  lib.rs  main.rs
tests/: audit_events.rs  batch_child_cleanup_test.rs  batch_lock_test.rs  batch_retry_test.rs  batch_rewind_test.rs  batch_scenarios_test.rs  batch_scheduler_test.rs  batch_session_resolve_test.rs  claim_sidecar.rs  cli_init_from_stdin.rs  cli_session_start.rs  cli_workspace_prune.rs  cloud_integration_test.rs  config_precedence.rs  dashboard_test.rs  diagnostics_streams.rs  discovery_scan.rs  epoch_fencing.rs  error_envelope_schema_test.rs  header_serde_round_trip.rs  idempotency.rs  integration_test.rs  lib_reexports.rs  native_workflows_shape.rs  recursion_caps.rs  respawn.rs  terminal_index.rs  terminal_index_compaction.rs  wake_recovery.rs
wip/: AUTONOMOUS_MODE_DIRECTIVE.md  batch-spawn-walkthrough.md  decision_artifact-form-v2_report.md  decision_context-artifact-naming_report.md  decision_gate-history-rendering_report.md  decision_plan-backed-mode_report.md  decision_session-list-ordering_report.md  design_auto-advance-response-contract_coordination.json  design_auto-advance-response-contract_decision_1_report.md  design_auto-advance-response-contract_decision_2_report.md  design_auto-advance-response-contract_summary.md  design_auto-advance-transitions_coordination.json  design_auto-advance-transitions_decision_1_report.md  design_auto-advance-transitions_decision_2_report.md  design_auto-advance-transitions_summary.md  design_auto-advancement-engine_summary.md  design_backend-state-persistence_coordination.json  design_backend-state-persistence_decision_1_report.md  design_backend-state-persistence_decision_2_report.md  design_backend-state-persistence_summary.md  design_batch-child-spawning_coordination.json  design_batch-child-spawning_cross_validation.md  design_batch-child-spawning_cross_validation_round1.md  design_batch-child-spawning_decision_10_report.md  design_batch-child-spawning_decision_11_report.md  design_batch-child-spawning_decision_12_report.md  design_batch-child-spawning_decision_13_report.md  design_batch-child-spawning_decision_14_report.md  design_batch-child-spawning_decision_1_report.md  design_batch-child-spawning_decision_2_report.md  design_batch-child-spawning_decision_3_report.md  design_batch-child-spawning_decision_4_report.md  design_batch-child-spawning_decision_5_report.md  design_batch-child-spawning_decision_6_report.md  design_batch-child-spawning_decision_7_report.md  design_batch-child-spawning_decision_8_report.md  design_batch-child-spawning_decision_9_report.md  design_batch-child-spawning_decisions.md  design_batch-child-spawning_summary.md  design_batch-rewind_coordination.json  (+291 more)
(+659 files in other folders)
