[package]
name = "koto"
version = "0.8.4"
edition = "2021"
description = "Workflow orchestration engine for AI coding agents"
license = "MIT"
repository = "https://github.com/tsukumogami/koto"
default-run = "koto"

[[bin]]
name = "koto"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
sha2 = "0.10"
hex = "0.4"
regex = "1"
opener = "0.7"
thiserror = "1"
toml = "0.8"
anyhow = "1"
tempfile = "3"
rust-s3 = { version = "0.37", default-features = false, features = ["sync-rustls-tls", "fail-on-err"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3.1.4"
tempfile = "3"

[features]
cloud-integration-tests = []

[profile.release]
lto = true
strip = true
